<resources>
    <string name="app_name">郎伦游戏</string>
    <string name="menu_item_main">首页</string>
    <string name="menu_item_game">游戏</string>
    <string name="menu_item_quanzhi">关于我们</string>
    <string name="menu_item_me">我的</string>
    <string name="welcome_tile_1">郎伦游戏</string>
    <string name="welcome_tile_2">有你更精彩</string>
    <string name="welcome_image_desc">欢迎页</string>
    <string name="welcome_scape_title_1">跳过</string>
    <string name="welcome_scape_title_2">正在跳转</string>


    <string name="regist">注册</string>
    <string name="regist_input_hint_auth_code">验证码</string>
    <string name="regist_input_hint_password">密码</string>
    <string name="regist_input_hint_password_again">确认密码</string>
    <string name="regist_input_hint_phone_number">手机号</string>
    <string name="regist_input_hint_regist_nickname">用户名</string>
    <string name="regist_input_hint_username">用户名或手机号</string>
    <string name="regist_input_hint_phone">手机号</string>
    <string name="regist_obtain_auth_code">获取验证码</string>

    <string name="load_fail">加载失败</string>
    <string name="loading">加载中…</string>
    <string name="login_forget_password">忘记密码</string>
    <string name="login_regist">注册</string>
    <string name="login_to_zan">登录后点赞</string>
    <string name="logout">退出登录</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">登录</string>

    <string name="load_more_text">正在加载...</string>

    <string name="regist_user_protocol_title">已阅读并同意《用户协议》</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
