<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_scape"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:gravity="right"
        android:text="@string/welcome_scape_title_1"
        android:textColor="@color/tab_checked"
        android:textSize="20sp"
        android:textStyle="bold" />
    <!--<LinearLayout-->
    <!--android:layout_below="@id/tv_scape"-->
    <!--android:orientation="vertical"-->
    <!--android:layout_width="match_parent"-->
    <!--android:gravity="center"-->
    <!--android:layout_height="match_parent">-->
    <ImageView
        android:layout_marginTop="30dp"
        android:layout_below="@id/tv_scape"
        android:id="@+id/welcome_icon_img"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/welcome_title_1_tv"

        android:contentDescription="@string/welcome_image_desc"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/welcome_title_1_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:text="@string/welcome_tile_1"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/welcome_title_1_tv"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/welcome_tile_2"
        android:textSize="20sp"
        android:textStyle="bold" />
    <!--</LinearLayout>-->


</RelativeLayout>